--- a/style3a.css
+++ b/style3a.css
@@ -1,6 +1,6 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
-    color: whitesmoke;
+    
 }
 
 
@@ -140,4 +140,177 @@ text-align: center;
     text-align: center;
     padding: 30px;
 
+}
+
+
+.WL{
+    display: inline-block;
+    background-color: whitesmoke;
+    padding: 70px;
+    margin: 40px;
+    text-align: center;
+    color: #3366CC;
+    font-weight: bold;
+    font-size: 15px;
+}
+.ML{
+    display: inline-block;
+    background-color: whitesmoke;
+    padding: 70px;
+    margin: 40px;
+    text-align: center;
+    color: #3366CC;
+    font-weight: bold;
+    font-size: 15px;
+}
+.OS{
+    display: inline-block;
+    background-color: whitesmoke;
+    padding: 70px;
+    margin: 40px;
+    text-align: center;
+    color: #3366CC;
+    font-weight: bold;
+    font-size: 15px;
+}
+.DK{
+    display: inline-block;
+    background-color: whitesmoke;
+    padding: 70px;
+    margin: 40px;
+    text-align: center;
+    color: #3366CC;
+    font-weight: bold;
+    font-size: 15px;
+}
+.ED{
+    display: inline-block;
+    background-color: whitesmoke;
+    padding: 70px;
+    margin: 40px;
+    text-align: center;
+    color: #3366CC;
+    font-weight: bold;
+    font-size: 15px;
+}
+.RP{
+    display: inline-block;
+    background-color: whitesmoke;
+    padding: 70px;
+    margin: 40px;
+    text-align: center;
+    color: #3366CC;
+    font-weight: bold;
+    font-size: 15px;
+}
+.multi-div{
+    text-align: center;
+}
+.imgs{
+    text-align: center;
+}
+.mission{
+    color: #3366CC;
+    margin-left: 10px;
+    font-weight: bolder !important;
+}
+.line0{
+    color: green;
+    margin-left: 10px;
+}
+.hs{
+    background-color: whitesmoke;
+    display: inline-flex;
+    padding: 25px;
+    margin: 10px;
+    border: gray 2px;
+    color: #3366CC;
+    font-weight: bold;
+    text-align: center;
+}
+.hp{
+    background-color: whitesmoke;
+    display: inline-flex;
+    padding: 25px;
+    margin: 10px;
+    border: gray 2px;
+    color: #3366CC;
+    font-weight: bold;
+    text-align: center;
+}
+.ilt{
+    background-color: whitesmoke;
+    display: inline-flex;
+    padding: 25px;
+    margin: 10px;
+    border: gray 2px;
+    color: #3366CC;
+    font-weight: bold;
+    text-align: center;
+}
+.thar{
+    background-color: whitesmoke;
+    display: inline-flex;
+    padding: 25px;
+    margin: 10px;
+    border: gray 2px;
+    color: #3366CC;
+    font-weight: bold;
+    text-align: center;
+    
+}
+.multi-div-1{
+    margin-left: 10px;
+    display: inline-flexbox;
+
+}
+.multi-div-2{
+    margin-left: 10px;
+    display: inline-    ;
+
+}
+.updates{
+   position: absolute;
+   left: 700px;
+   top: 3155px;
+}
+.divider-1{
+    display: inline-block;
+}
+.divider-2{
+    display: inline-block;
+}
+.footer{
+    background-color: black;
+}
+
+.line01{
+    color: gray;
+    display: inline-block;
+}
+.line011{
+    display: inline-block;
+    color: green;
+}
+
+
+.div-11{
+color: gray;
+display: inline-block;
+padding-top: 50px;
+}
+
+.div-12{
+display: inline-block;
+padding-bottom: 100px;
+color: white;
+position: relative;
+bottom: 150px;
+}
+
+.div-13{
+ display: inline-block;
+color: white;
+position: relative;
+bottom: 180px;
 }
